--- a/search.html
+++ b/search.html
@@ -3,10 +3,7 @@ layout: default
 title: Search
 ---
 <div class="home">
-
-  {{ content }}
-
-  <h1 class="page-heading">Posts</h1>
+  <h1 class="page-heading">Search</h1>
 
   <div id="search-searchbar"></div>
 
